[package]
name = "client"
version = "0.1.0"
authors = ["Ayeen M Khan <48828861+ayeenmkhan@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.12"
h2 = "0.3.0"
http = "0.2.3"
tokio = "1.1.1"